--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
+  "name": "pet-world",
+  "description": "Web application for scheduling services for pet shops",
+  "author": "Juliana Johansson Braga",
   "scripts": {
+    "build": "webpack",
+    "dev": "webpack serve",
     "server": "json-server --watch server.json --port 3333"
   },
   "dependencies": {
     "json-server": "^1.0.0-beta.3"
+  },
+  "devDependencies": {
+    "webpack": "^5.102.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   }
 }
