--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "webpack",
     "dev": "webpack serve",
+    "deploy": "gh-pages -d dist",
     "server": "json-server --watch server.json --port 3333"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "babel-loader": "^10.0.0",
     "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.6.4",
     "style-loader": "^4.0.0",
     "webpack": "^5.102.1",
